// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaTree foo: foo-snap 1`] = `
SchemaTree {
  "name": "foo",
  "nodes": Object {
    "foo": Object {
      "children": Array [],
      "data": Object {
        "desc": "foo",
        "title": "foo",
      },
      "id": "foo",
      "logicalId": "foo",
      "parent": null,
    },
  },
  "root": Object {
    "children": Array [],
    "data": Object {
      "desc": "foo",
      "title": "foo",
    },
    "id": "foo",
    "logicalId": "foo",
    "parent": null,
  },
}
`;

exports[`SchemaTree fromSchemaYAML: fromSchemaYAML 1`] = `
SchemaTree {
  "name": "project",
  "nodes": Object {
    "dev": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "dev",
      },
      "id": "dev",
      "logicalId": "dev",
      "parent": null,
    },
    "features": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "what does it do",
        "kind": undefined,
        "title": "features",
      },
      "id": "features",
      "logicalId": "features",
      "parent": null,
    },
    "project": Object {
      "children": Array [
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "quickstart",
          },
          "id": "quickstart",
          "logicalId": "quickstart",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "topic",
          },
          "id": "topic",
          "logicalId": "topic",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "version",
          },
          "id": "version",
          "logicalId": "version",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "dev",
          },
          "id": "dev",
          "logicalId": "dev",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "features",
          },
          "id": "features",
          "logicalId": "features",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "rel",
          },
          "id": "rel",
          "logicalId": "rel",
        },
      ],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "project",
      },
      "id": "project",
      "logicalId": "project",
      "parent": null,
    },
    "quickstart": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "get started with project",
        "kind": undefined,
        "title": "quickstart",
      },
      "id": "quickstart",
      "logicalId": "quickstart",
      "parent": null,
    },
    "rel": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "relative",
        "kind": undefined,
        "title": "rel",
      },
      "id": "rel",
      "logicalId": "rel",
      "parent": null,
    },
    "topic": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "topic",
      },
      "id": "topic",
      "logicalId": "topic",
      "parent": null,
    },
    "version": Object {
      "children": Array [
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "version-major",
          },
          "id": "version-major",
          "logicalId": "version-major",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "version-minor",
          },
          "id": "version-minor",
          "logicalId": "version-minor",
        },
        Object {
          "data": Object {
            "aliases": Array [],
            "choices": Array [],
            "desc": "",
            "kind": undefined,
            "title": "version-breaking",
          },
          "id": "version-breaking",
          "logicalId": "version-breaking",
        },
      ],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "version",
      },
      "id": "version",
      "logicalId": "version",
      "parent": null,
    },
    "version-breaking": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "version-breaking",
      },
      "id": "version-breaking",
      "logicalId": "version-breaking",
      "parent": null,
    },
    "version-major": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "the major version",
        "kind": undefined,
        "title": "version-major",
      },
      "id": "version-major",
      "logicalId": "version-major",
      "parent": null,
    },
    "version-minor": Object {
      "children": Array [],
      "data": Object {
        "aliases": Array [],
        "choices": Array [],
        "desc": "",
        "kind": undefined,
        "title": "version-minor",
      },
      "id": "version-minor",
      "logicalId": "version-minor",
      "parent": null,
    },
  },
  "root": Object {
    "children": Array [
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "quickstart",
        },
        "id": "quickstart",
        "logicalId": "quickstart",
      },
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "topic",
        },
        "id": "topic",
        "logicalId": "topic",
      },
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "version",
        },
        "id": "version",
        "logicalId": "version",
      },
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "dev",
        },
        "id": "dev",
        "logicalId": "dev",
      },
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "features",
        },
        "id": "features",
        "logicalId": "features",
      },
      Object {
        "data": Object {
          "aliases": Array [],
          "choices": Array [],
          "desc": "",
          "kind": undefined,
          "title": "rel",
        },
        "id": "rel",
        "logicalId": "rel",
      },
    ],
    "data": Object {
      "aliases": Array [],
      "choices": Array [],
      "desc": "",
      "kind": undefined,
      "title": "project",
    },
    "id": "project",
    "logicalId": "project",
    "parent": null,
  },
}
`;

exports[`SchemaTree root/foo: root/foo-snap 1`] = `
SchemaTree {
  "name": "root",
  "nodes": Object {
    "foo": Object {
      "children": Array [],
      "data": Object {
        "desc": "foo",
        "title": "foo",
      },
      "id": "foo",
      "logicalId": "foo",
      "parent": null,
    },
    "root": Object {
      "children": Array [
        Object {
          "data": Object {
            "desc": "foo",
            "title": "foo",
          },
          "id": "foo",
          "logicalId": "foo",
        },
      ],
      "data": Object {
        "desc": "root",
        "title": "root",
      },
      "id": "root",
      "logicalId": "root",
      "parent": null,
    },
  },
  "root": Object {
    "children": Array [
      Object {
        "data": Object {
          "desc": "foo",
          "title": "foo",
        },
        "id": "foo",
        "logicalId": "foo",
      },
    ],
    "data": Object {
      "desc": "root",
      "title": "root",
    },
    "id": "root",
    "logicalId": "root",
    "parent": null,
  },
}
`;

exports[`SchemaTree root: root-snap 1`] = `
SchemaTree {
  "name": "root",
  "nodes": Object {
    "root": Object {
      "children": Array [],
      "data": Object {
        "desc": "root",
        "title": "root",
      },
      "id": "root",
      "logicalId": "root",
      "parent": null,
    },
  },
  "root": Object {
    "children": Array [],
    "data": Object {
      "desc": "root",
      "title": "root",
    },
    "id": "root",
    "logicalId": "root",
    "parent": null,
  },
}
`;
